# portfolio

./: .gitmodules  LICENCE.md  README.md
2015/solar-system-simulator/: README.md  filewindow.py  main.py  object.py  test.py
2017/laser-squad-1/: README.md
2017/laser-squad-1/plan/: comments.md
2017/laser-squad-1/src/: Ammunition.cpp  Ammunition.hpp  Boss.cpp  Boss.hpp  CMakeLists.txt  Cell.cpp  Cell.hpp  Character.cpp  Character.hpp  FileRead.cpp  FileRead.hpp  Food.cpp  Food.hpp  GUI.cpp  GUI.hpp  Game.cpp  Game.hpp  GameAudio.cpp  GameAudio.hpp  Gun.cpp  Gun.hpp  Item.cpp  Item.hpp  MachineGun.hpp  Map.cpp  Map.hpp  Menuwindow.cpp  Menuwindow.hpp  Pistol.hpp  Player.cpp  Player.hpp  Riffle.hpp  Scout.cpp  Scout.hpp  Sidebar.cpp  Sidebar.hpp  Soldier.cpp  Soldier.hpp  Tilemap.cpp  Tilemap.hpp  (+1 more)
2017/laser-squad-1/src/includes/: GameLevels.txt
2017/laser-squad-1/src/tests/: Laser_Squad_testi2.cpp  main.cpp
2018/chat-application/: Makefile  README.md
2018/chat-application/backend/: .firebaserc  .gitignore  database.rules.json  firebase.json  package.json  storage.rules
2018/chat-application/backend/functions/: package.json  tslint.json
2018/chat-application/backend/functions/src/: index.ts
2018/chat-application/frontend/: build.gradle
2018/chat-application/frontend/app/: build.gradle
2018/chat-application/frontend/app/src/main/: AndroidManifest.xml
2018/chat-application/frontend/app/src/main/res/animator/: bounce_first.xml  bounce_second.xml  bounce_third.xml
2018/chat-application/frontend/app/src/main/res/drawable/: button_background.xml  button_default_state.xml  button_pressed_state.xml  chat_message_others.xml  chat_message_self.xml  ic_chat.xml  (+7 more)
solar-system-simulator/: SolarSystem.txt  data.py  derivatives.py  endwindow.py  objectwindow.py  simulation.py  window.py
(+56 files in other folders)
